# Mart_Project_docker_kafga

Martproject/: compose.yml
Martproject/Front_End/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
Martproject/Front_End/public/big sale/: mega-diwali.avif
Martproject/Front_End/src/app/: globals.css  layout.tsx  page.tsx
Martproject/Front_End/src/app/cart/: page.tsx
Martproject/Front_End/src/app/chatbot/: page.tsx
Martproject/Front_End/src/app/components/: brand_card.tsx  flash_sale.tsx  header.tsx  mens_womens.tsx  most_wanted.tsx  phone_accesries.tsx  phone_tablet.tsx  shiping_cards.tsx  slide.tsx  top_catagory_card.tsx  top_trending_card.tsx
Martproject/Front_End/src/app/components/banner/: carousel.min.css  page.tsx
Martproject/Front_End/src/app/components/bottomHeader/: page.tsx
Martproject/Front_End/src/app/customerService/: page.tsx
Martproject/Front_End/src/app/delivery/: page.tsx
Martproject/Front_End/src/app/favorite/: page.tsx
Martproject/Front_End/src/app/giftCard/: page.tsx
Martproject/Front_End/src/app/login/: page.tsx
Martproject/Front_End/src/app/registry/: page.tsx
Martproject/Front_End/src/app/sell/: page.tsx
Martproject/Front_End/src/app/signout/: page.tsx
Martproject/Front_End/src/app/todayDeal/: page.tsx
Martproject/Front_End/src/app/wishlist/: page.tsx
Martproject/Product_services/: .env  Dockerfile  pyproject.toml
Martproject/Product_services/product_service/: crud.py  db.py  main.py  schema.py  sttings.py
Martproject/User_Services/: .env  Dockerfile  README.md  pyproject.toml
Martproject/User_Services/user_service/: crud.py  db.py  model.py
Martproject/User_Services/user_service/app/: auth.py  crud.py  db.py  main.py  model.py  settings.py  userinfo.proto  userinfo_pb2.py  userrouter.py
(+3 files in other folders)
